--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.2.2",
     "bootstrap4": "^0.0.1-security",
     "formik": "^2.2.9",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
